# Modules/CutePet/Routes/api.php
@@ -18,10 +18,19 @@ $router->post('/user/password', 'V1\Auth\LoginController@password');
 //前台用户注册
 $router->post('/user/login', 'V1\Auth\LoginController@register');
 /**
+ *
  * 帖子组
+ */
+
+/**
+ * 发布帖子
  */
 $router->middleware('auth:cute_pet_api')->post('/post/add', 'V1\Post\PostController@addPost');
 
+/**
+ * 删除帖子
+ */
+$router->middleware('auth:cute_pet_api')->delete('/post', ['uses' => 'V1\Post\PostController@deletePost']);
 
 
 
